chore: AI refactoring towards helper methods via Claude [skip ci]